# awesome-development-cooperation-data

./: README.md
interfaces/giz/: README.md  scraper.py
interfaces/iati/mcp_server_iati/: .env.template  .gitignore  README.md  pyproject.toml
interfaces/iati/mcp_server_iati/mcp_server_iati/: iati.py  server.py
interfaces/kfw/: README.md  download.py
